# RTv1

./: CMakeCache.txt  CMakeLists.txt  Makefile  RTv1  RTv1.cbp  cmake_install.cmake  help_computelight.c  help_utils.c  init.c  intesect.c  main.c  parse_obj.c  parser.c  parser.h  ray.c  read_scene1.c  rtv1.c  rtv1.h  source.c  vector_scal.c  vector_utils.c
scenes/: v1.rts  v10.rts  v7.rts
